clusters/common/apps/speedtest/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: speedtest
  namespace: speedtest
  annotations:
    item.homer.rajsingh.info/name: "SpeedTest"
    item.homer.rajsingh.info/subtitle: "Network Speed Test"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/speedtest-tracker.png"
    item.homer.rajsingh.info/keywords: "network, speed, test"

    service.homer.rajsingh.info/name: "Utilities"
    service.homer.rajsingh.info/icon: "fas fa-tools"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "speedtest.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: speedtest-openspeedtest
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
